2011-6-27
Serious bugfix for parse-{cky,tree,tree-cky} where the features from source lattice/forest(s) are completely ignored for pruning.
Added format, a formatter/parser derived from ICU's number/date format/parse
Added grammar-format, grammar using the ICU's number/date formatter/parser as our rule!
Added experimental kbest-based learner/mert/oracle computer with support for liblinear solver
Support multiple forest loading in cicada_learn_mpi and added an option to load previously training parameters
Support margin-based learning in cicada_learn_mpi

2011-6-6
Reimplemented scorer for extracted counts.
   Previously we store all the target side counts in a DB, but now we use re-sort based implementation
   found in moses script, though it requires extra storage.
Tweaked parameters for grammar-static and tree-grammar-static for large data indexing.

2011-6-1
Bugfix for mpi version of extract-score. Instead of pushing into stream, wait: We assume that send-buffer is large enough for better map-reduce

2011-5-30
Serious bugfix for {compose,parse}-{tree,tree-cky}: internal rules are not correctly computed
Serious bugfix for sentence input in cicada and cicada_mpi: by default, we will read in sentence-mode, instead of previous "lattice" then fallback to "sentence"
Added --input-sentence option to explicitly control the behavior
Added --multiple option for cicada_unite_*
Added --constrained option for constraining the # of nodes/height of minimal rules in GHKM extraction
Added skip-sgml-tag in ngram/bleu/bleu-linear feature and mt evals, such as bleu, wer etc. But this will no skip <s> </s>
Less memory consumption in scfg/ghkm/tree extraction by frequently checking memory usage (+ slightly slower)
Less memory consumption in parse-coarse
Better feature-vector implementation with smaller storage
Faster(?) parse-{cky,tree,tree-cky} by pre-pruning rules if exceeding pop limits.
Removed "dot" and use separate "dot_product" in dot_product.hpp